cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2018
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- as of GHC 9.0.1, enabling -Wmissing-exported-signatures disables stricter -Wmissing-signatures
    -- I want -Wmissing-signatures, so I will not enable -Wmissing-exported-signatures.
    -- They may have changed this in 9.2.1, so check back later.
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_frequency_deltas
  import: bin, flags
  build-depends: base, adventofcode2018
  main-is:       01_frequency_deltas.hs

executable 02_inventory_management
  import: bin, flags
  build-depends: base, adventofcode2018, containers
  main-is:       02_inventory_management.hs

executable 03_grid_claims
  import: bin, flags
  build-depends: base, adventofcode2018, aocsplit, array, containers
  main-is:       03_grid_claims.hs

executable 04_repose_record
  import: bin, flags
  build-depends: base, adventofcode2018, containers
  main-is:       04_repose_record.hs

executable 05_alchemical_reduction
  import: bin, flags
  build-depends: base, adventofcode2018
  main-is:       05_alchemical_reduction.hs

executable 06_chronal_coordinates
  import: bin, flags
  build-depends: base, adventofcode2018, containers
  main-is:       06_chronal_coordinates.hs

executable 07_topological
  import: bin, flags
  build-depends: base, adventofcode2018, containers
  main-is:       07_topological.hs

executable 08_metadata_tree
  import: bin, flags
  build-depends: base, adventofcode2018
  main-is:       08_metadata_tree.hs

executable 09_marble_mania
  import: bin, flags
  -- not currently using containers, but kept for easy comparison
  build-depends: base, array, containers
  main-is:       09_marble_mania.hs
