cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2018
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocasm
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Assembly
  build-depends:   base, containers

library aocsearch
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Search
  build-depends:   base, containers

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_frequency_deltas
  import: bin, flags
  build-depends: base, adventofcode2018
  main-is:       01_frequency_deltas.hs

executable 02_inventory_management
  import: bin, flags
  build-depends: base, adventofcode2018, containers
  main-is:       02_inventory_management.hs

executable 03_grid_claims
  import: bin, flags
  build-depends: base, adventofcode2018, aocsplit, array, containers
  main-is:       03_grid_claims.hs

executable 04_repose_record
  import: bin, flags
  build-depends: base, adventofcode2018, containers
  main-is:       04_repose_record.hs

executable 05_alchemical_reduction
  import: bin, flags
  build-depends: base, adventofcode2018
  main-is:       05_alchemical_reduction.hs

executable 06_chronal_coordinates
  import: bin, flags
  build-depends: base, adventofcode2018, array
  main-is:       06_chronal_coordinates.hs

executable 07_topological
  import: bin, flags
  build-depends: base, adventofcode2018, containers
  main-is:       07_topological.hs

executable 08_metadata_tree
  import: bin, flags
  build-depends: base, adventofcode2018
  main-is:       08_metadata_tree.hs

executable 09_marble_mania
  import: bin, flags
  -- not currently using containers, but kept for easy comparison
  -- modifyArray added in array 0.5.6.0
  build-depends: base, array >= 0.5.6.0, containers
  main-is:       09_marble_mania.hs

executable 10_the_stars_align
  import: bin, flags
  build-depends: base, adventofcode2018, aocsplit, containers
  main-is:       10_the_stars_align.hs

executable 11_max_square
  import: bin, flags
  build-depends: base, array
  main-is:       11_max_square.hs

executable 13_mine_cart_madness
  import: bin, flags
  build-depends: base, adventofcode2018, array
  main-is:       13_mine_cart_madness.hs

executable 16_chronal_classification
  import: bin, flags
  build-depends: base, adventofcode2018, aocasm, aocsplit, containers
  main-is:       16_chronal_classification.hs

executable 17_reservoir_research
  import: bin, flags
  build-depends: base, adventofcode2018, aocsplit, containers
  main-is:       17_reservoir_research.hs

executable 19_go_with_the_flow
  import: bin, flags
  build-depends: base, adventofcode2018, aocasm, array, containers
  main-is:       19_go_with_the_flow.hs

executable 20_a_regular_map
  import: bin, flags
  build-depends: base, adventofcode2018, aocsearch, containers
  main-is:       20_a_regular_map.hs

executable 21_chronal_conversion
  import: bin, flags
  build-depends: base, adventofcode2018, aocasm, array, containers
  main-is:       21_chronal_conversion.hs
